--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: "Peace";
+  src: url(../public/medias/PyeongChang-Bold.woff) format("woff");
+}
+@font-face {
+  font-family: "PeaceB";
+  src: url(../public/medias/PyeongChangPeace-Bold.woff) format("woff");
+}
+@font-face {
+  font-family: "chosun";
+  src: url(../public/medias/ChosunNm.woff) format("woff");
+}
+@font-face {
+  font-family: "Neo";
+  src: url(../public/medias/NanumSquareNeoTTF-bRg.woff) format("woff");
+}
+@font-face {
+  font-family: "Neo2";
+  src: url(../public/medias/NanumSquareNeoTTF-dEb.woff) format("woff");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+  font-family: "star";
+  src: url(../public/medias/PyeongChangPeace-Light.woff) format("woff");
 }
